gccida/c3/copy_loop_body
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2257:4: error: expected ';' after expression
rtx v17; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2257:5: error: use of undeclared identifier 'v17'
rtx v17; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2260:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2260:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2263:1: error: use of undeclared identifier 'induction_1'
induction_1 *v23; // rsi 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2263:14: error: use of undeclared identifier 'v23'
induction_1 *v23; // rsi 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2266:4: error: expected ';' after expression
rtx v26; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2266:5: error: use of undeclared identifier 'v26'
rtx v26; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2270:4: error: expected ';' after expression
rtx label_from_map; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2270:5: error: use of undeclared identifier 'label_from_map'; did you mean 'get_label_from_map'?
rtx label_from_map; // rax 
    ^~~~~~~~~~~~~~
    get_label_from_map
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/integrate.h:166:12: note: 'get_label_from_map' declared here
extern rtx get_label_from_map PARAMS ((struct inline_remap *, int));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2277:4: error: expected ';' after expression
rtx v37; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2277:5: error: use of undeclared identifier 'v37'
rtx v37; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2285:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2285:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2287:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2287:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2290:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2290:5: error: use of undeclared identifier 'v50'; did you mean 'v40'?
rtx v50; // rax 
    ^~~
    v40
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/unroll.c:2280:5: note: 'v40' declared here
int v40; // eax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/copy_loop_body/src/obj/unroll.o] Error 1
